# language-learning-tools

./: .env  .env.example  .gitignore  .gitmodules  README.md
python/audio-pipeline/: .coveragerc  .env.example  .gitignore  README.md  main.py  pyproject.toml
python/audio-pipeline/infra/: foundry.bicep  foundry.bicepparam
python/audio-pipeline/src/application/: enrichers.py  pipeline.py  services.py
python/audio-pipeline/src/domain/: entities.py  events.py  interfaces.py  value_objects.py
python/audio-pipeline/src/infrastructure/: audio.py  azure_inference_annotation.py  azure_inference_annotation_mapper.py  azure_inference_translation.py  azure_inference_translation_mapper.py  bus.py  diarization.py  event_handlers.py  factory.py  llama_cpp_translation.py  logging.py  repositories.py  serialization.py  transcription.py
python/audio-pipeline/tests/application/: test_annotation_enricher.py  test_enrichers.py  test_merging_enricher.py  test_pipeline.py  test_pipeline_performance.py  test_segmentation_logic.py  test_services.py  test_translation_enricher.py
python/audio-pipeline/tests/data/: speaker_verification.json  test_10s.m4a  test_30s.m4a  test_30s_raw.json
python/audio-pipeline/tests/domain/: test_entities.py  test_value_objects.py
python/audio-pipeline/tests/infrastructure/: test_audio.py  test_azure_annotation_integration.py  test_azure_annotation_mapper.py  test_azure_inference_translator.py  test_azure_translation_mapper.py  test_diarization.py  test_e2e.py  (+6 more)
python/audio-pipeline/tools/: compare_results.py  create_verification_json.py  poc_ui.html
(+132 files in other folders)
